# miracl_multiGroup

./: CMakeLists.txt  big.cpp  big.h  ecn.cpp  ecn.h  entity.cpp  entity.h  main.cpp  miracl.c  miracl.h  sha256.cpp  sha256.h  ssp_pair.cpp  ssp_pair.h  zzn.cpp  zzn.h  zzn2.cpp  zzn2.h
